# MCP-Oreilly-2

./: package.json
nodejs/smarthome-mcp-server-nodejs/: index.ts  matter-controller.ts  tsconfig.json
nodejs/smarthome-mcp-server-nodejs/src/: index.ts
python/stock_mcp/: pyproject.toml  server.py  stock_formatter.py
