[project]
name = "stock-mcp-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.4.1",
    "httpx>=0.28.1",
    "mcp>=1.13.1",
    "python-dotenv>=1.1.1",
    "twelvedata>=1.2.25",
]

[project.scripts]
stock-mcp = "stock_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["stock_mcp"]

[tool.uv]
package = true